--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Oca's homepage
-description: Welcome to my personal homepage.
+title: Oca's academic page
+description: Welcome to my personal academic page.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
