--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Oca's academic page
-description: Welcome to my personal academic page.
+title: Xi Zhang's Academic Page
+# description: Xi Zhang's Academic Page.
 show_downloads: false
-google_analytics:
+# google_analytics:
 theme: jekyll-theme-hacker
